updating italic in CSS word

--- a/Practice2.html
+++ b/Practice2.html
@@ -22,7 +22,7 @@
         </p>
         <br>
         <p>
-            <b><i><span style="color:#000000;">CSS <sup>(Cascading Style Sheet)</sup></span></i></b> adalah kependekan dari Cascading Style Sheet. CSS merupakan kumpulan kode-kode yang bertujuan untuk menghias dan
+            <b><span style="color:#000000;">CSS <i></i><sup>(Cascading Style Sheet)</sup></span></i></b> adalah kependekan dari Cascading Style Sheet. CSS merupakan kumpulan kode-kode yang bertujuan untuk menghias dan
             mengatur gaya tampilan/layout halaman web supaya lebih elegan dan menarik. CSS cascading sy adalah sebuah teknologi internet yang direkomendasikan
             oleh World Wide Web Consortium atau W3C pada tahun 1996.
         </p>
