--- a/htmltable.html
+++ b/htmltable.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td>07:00-08:00</td>
-            <td rowspan="2" bgcolor="#4df062">Praktikum Web</td>
+            <td rowspan="2" bgcolor="#66ff4a">Praktikum Web</td>
             <td></td>
             <td></td>
             <td></td>
@@ -29,14 +29,14 @@
         </tr>
         <tr>
             <td>08:00-09:00</td>
-            <td rowspan="2" bgcolor="#4df062">Praktikum Java</td>
-            <td rowspan="3" bgcolor="cyan">Java Lanjut</td>
+            <td rowspan="2" bgcolor="#66ff4a">Praktikum Java</td>
+            <td rowspan="3" bgcolor="#87edff">Java Lanjut</td>
             <td></td>
         </tr>
         <tr>
             <td>09:00-10:00</td>
             <td></td>
-            <td rowspan="2" bgcolor="#4df062">Praktikum Jaringan</td>
+            <td rowspan="2" bgcolor="#66ff4a">Praktikum Jaringan</td>
         </tr>
         <tr>
             <td>10:00-11:20</td>
@@ -45,14 +45,14 @@
         </tr>
         <tr>
             <td>11:20-13:00</td>
-            <td bgcolor="yellow" colspan="6" align="left">Ishoma</td>
+            <td bgcolor="#FFFF00" colspan="6" align="left">Ishoma</td>
         </tr>
         <tr>
             <td>13:00-14:00</td>
-            <td rowspan="2" bgcolor="cyan">Web</td>
+            <td rowspan="2" bgcolor="#87edff">Web</td>
             <td></td>
             <td></td>
-            <td rowspan="2" bgcolor="cyan">Jaringan</td>
+            <td rowspan="2" bgcolor="#87edff">Jaringan</td>
             <td rowspan="2"></td>
             <td rowspan="2"></td>
         </tr>
