mengubah cellpadding logininterface dan buat file tugas baru

--- a/LoginInterface.html
+++ b/LoginInterface.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
+    <table cellpadding="3">
         <caption>Silahkan Login Terlebih Dahulu</caption>
         <tr>
             <td>Username</td>
@@ -19,8 +19,8 @@
         <tr>
             <td></td>
             <td>
-                <input type="submit" value="login">
-                <input type="reset" value="reset">
+                <input type="submit" value="Login">
+                <input type="reset" value="Reset">
             </td>
         </tr>
     </table>
